Adding my family

--- a/linkups.html
+++ b/linkups.html
@@ -76,7 +76,7 @@
                 <h2>Design and Development Process</h2>
                 <p class="description">We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community. </p><img class="project_demo" src="./linkups/brainstorming_1.png" alt="brainstorming doc"><div><caption>Brainstorming our Ideas</caption></div>
                 <img class="project_demo" src="./linkups/brainstorming_2.png" alt="brainstorming doc"><div><caption>Brainstorming extended</caption></div>
-                <p class="description">In our second class meeting with our professor, I was assigned to lead team one. I assigned multiple roles to my teammates. Leon was a chatbot developer, Sebastian was a powerpoint creator, Hemraj was a writer, Kevin was a web designer and I was a project manager. Roles were not limited to what was aasigned as our professor gave us activities to complete for our project. We eventually got our project name and created a <a href="./linkups/project_proposal.pdf"> project proposal</a> for Linkups. We continued with vision and mission statements followed by Gantt chart.</p><img class="project_demo" src="./linkups/gantt_chart.png" alt="Gantt Chart"><div><caption>Gantt Chart on Project Libre</caption></div>
+                <p class="description">In our second class meeting with our professor, I was assigned to lead team one. I assigned multiple roles to my teammates. <a href="https://www.linkedin.com/in/gina-leon-serna-727804205/">Leon</a> was a chatbot developer, <a href="">Sebastian</a> was a powerpoint creator, <a href="https://www.linkedin.com/in/hemraj-rasulan-414922221/">Hemraj</a> was a writer, <a href="">Kevin</a> was a web designer and I was a project manager. Roles were not limited to what was aasigned as our professor gave us activities to complete for our project. We eventually got our project name and created a <a href="./linkups/project_proposal.pdf"> project proposal</a> for Linkups. We continued with vision and mission statements followed by Gantt chart.</p><img class="project_demo" src="./linkups/gantt_chart.png" alt="Gantt Chart"><div><caption>Gantt Chart on Project Libre</caption></div>
             </div>
             <div id="functionality">
                 <h2>Features and Functionality</h2>
@@ -90,9 +90,10 @@
                 <h2>Technologies Used and Roles</h2>
                 <p class="description"> <abbr title="It is a program developed by The Project Libre community to assist users with tracking the progress of their projects. " >Project Libre</abbr> was used for creating a <abbr title="Henry L. Gantt, a mechanical engineer and management consultant, developed Gantt charts almost 100 years ago. His goal was to design a chart that could show planned and actual progress on a project. A Gantt chart is a horizontal bar chart that represents a set of tasks. ">Gantt chart</abbr> , Google Docs, Microsoft Word were used for writing our notes, project proposal, scripts etc..., Google Sheets was used to make <abbr title="A decision table is a scheduled rule logic entry, in table format, that consists of conditions, represented in the row and column headings, and actions, represented as the intersection points of the conditional cases in the table. ">Decision Table,</abbr>  Visual Code Studio was used to create our website, MacInCloud is a virtual machine used for virtual MacOS, to develop an iOS application with SwiftUI, and Microsoft PowerPoint was used to present our project.</p>
                 <img class="project_demo" src="./linkups/ios_linkups.png" alt="Swift UI IDE">
-                <p class="description">Leon created a group channel on Microsoft Teams so we can share and centralize our files with tohe members.</p>
-                <p class="description">Sebastian used Lucid Chart to create <abbr title="A context diagram is a top-level view of an information system that shows the system’s boundaries and scope. "> Context Level Diagram </abbr>for Linkups.</p>
-                <p class="description">Kevin and Leon used Visual Studio Code for developing our Website and chatbot for user's assistance.</p>
+                <p class="description"><a href="https://www.linkedin.com/in/gina-leon-serna-727804205/">Leon</a> created a group channel on Microsoft Teams so we can share and centralize our files with the members.</p>
+                <p class="description"><a href="">Sebastian</a> used Lucid Chart to create <abbr title="A context diagram is a top-level view of an information system that shows the system’s boundaries and scope. "> Context Level Diagram </abbr>for Linkups.</p>
+                <p class="description"><a href="">Kevin</a> and <a href="https://www.linkedin.com/in/gina-leon-serna-727804205/">Leon</a> used Visual Studio Code for developing our Website and chatbot for user's assistance.</p>
+                <p class="description"><a href="https://www.linkedin.com/in/hemraj-rasulan-414922221/">Hemraj</a> wrote our project proposal, vision, mission statement, and designed our logo. </p>
                 <p class="description">I used Microsoft 365, Zoom, Whatsapp, Github and Project Libre to schedule weekly meetings, manage our Gantt Chart, communicate with the team and shared our website code online.</p>
                 
             </div>
@@ -105,6 +106,10 @@
                 <p class="description">Assigning roles to each members was one of my challenges. I was not able to assign roles to eavery member until we finished brainstorming, wrote our project proposal and watched an example of a final presentation from previous class. It roles and assignments are given as we go on with our project until the finish line.</p>
                 <p class="description">Every team member have different schedules, so I must come up with a schedule that suits everyone. I created couple of polls on Whatsapp to finally come up with a time to meet weekly. There were moments where we would meet twice a week during midterms.</p>
                 <p class="description">There were concerns about sharing our web design and chatbot for the presentation. I combined the Chatbot and our website. I used GitHub to share our code and live static website so anyone can visit it.</p>
+            </div>
+            <div>
+                <h2>SWOT Analysis</h2>
+                <p class="description">Our SWOT Analysis was made by Hemraj. Linkups supports commmunity through partnership with organizations, companies and social media influencers.  <img  class="project_demo" src="./linkups/SWOT.png" alt="SWOT Analysis"> </p>
             </div>
             <!--<div>
                 <h2>Results and Impact</h2>
