--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <title>ePortfolio</title>
-        <link rel="icon" type="image/x-icon" href="./src/100prein.jpg">
+        <link rel="icon" type="image/x-icon" href="./src/100prein_logo.png">
         <link rel="stylesheet" href="src/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,400;0,800;1,500;1,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fcd93b617c.js" crossorigin="anonymous"></script>
@@ -27,7 +27,6 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Sekou Traore</h1>
-                    <p>Full Stack Developer</p>
                 </div>
                 <div class="socials">
                     <div><a href="https://twitter.com/100prein" class="social-item"><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg></a></div>
@@ -98,6 +97,11 @@
                 <div class="cert_section"><img src="./src/sys_admin.jpg" class="project_demo"><p>At the end of the course, I am able to utilize best practices for choosing hardware, vendors, and services for my organization; understand how the most common infrastructure services that keep an organization running work, and how to manage infrastructure servers</p></div>
                 <div class="cert_section"><img src="./src/dark_art.png" class="project_demo"><p> I learn how various encryption algorithms and techniques work as well as their benefits and limitations, various authentication systems and types, the difference between authentication and authorization, and how to evaluate potential risks and recommend ways to reduce risk.</p></div>
                 <div class="cert_section"><img src="./src/google_IT_cert.jpg" class="project_demo"><p>We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community.</p></div>
+                <div class="cert_section"><img src="./src/nsls_cert.png" class="project_demo"><p><abbr title="The National Society of Leadership Success is an organization that provides a life-changing leadership program that helps students achieve personal growth, career success, and empowers them to have a positive impact in their communities.">NSLS</abbr> provided me lessons and exercises to become a successful leader. The most challenging part was organizing or joining a Success Networking Team which requires two or more people. After few weeks of looking for members, <a href="https://www.linkedin.com/in/angela-gonzalez-3b099359/">Angela</a> reached out to me to join her SNT meetings. In our group, we made it possible to do our meeting every two weeks. Angela is our group leader, <a href="https://www.linkedin.com/in/shawna-priest/">Shawna</a> is a Time Keeper, <a href="https://www.facebook.com/tbsmith91">Tiffany</a> is Logistic Coordinator, <a href="https://www.linkedin.com/in/josseline-vargas-68065a249/">Josseline</a> and <a href="https://www.facebook.com/rhonda.fletcher.353">Rhonda</a> are Recorder and I was a Communication Coordinator. There was <a href="https://www.facebook.com/walter.nesbeth">Walter</a>, a busy man doing his research articles about Artificial Intelligence, who was a member of our group as well. We became family who would express our thoughts, give support and share ideas to keep each other up.</p></div>
+                <div class="cert_section"><img src="./src/fellows_cert.png" class="project_demo"><p>10KSB Fellows Program allowed me to use my knowledge I learn throughout my journey at LaGuardia Community College to the internship with <a href="http://localhost:3000/beberavi.html">Beberavi Collections.</a> website development, responsive web design and hosting. Communication, empathy, responsibility, flexibility and designing. </p></div>
+                <div class="cert_section"><img src="./src/asap_cert.png" class="project_demo"><p>My Advisor <a href="https://www.linkedin.com/in/brett-cummings-a9502911a/">Brett Cummings</a> is my advocate while I was going through tough times with work, financial issues, family obligations, and mental health.</p>
+                <p>I receive resources my advisor mentioned to me such as scholarships, events, career workshops, tutoring, monthly meetings and more. Thanks to these resources, I was able to complete my two-year program on time. I greatly thanks my advisor and his fellows.</p>
+                </div>
             </div>
         </section>
         <footer id="contact-me">
