--- a/5thseason.html
+++ b/5thseason.html
@@ -116,8 +116,8 @@
             </div>
         </section>
         <section class="sub-section_linkups" id="about-me">
-            <p><a href="https://github.com/100prein/webPorject_github/tree/main" target="_blank">Check on Github</a></p>
-            <p><a href="https://100prein.github.io/webPorject_github/" target="_blank">Check on Github Web</a></p>
+            <!--<p><a href="https://github.com/100prein/webPorject_github/tree/main" target="_blank">Check on Github</a></p>-->
+            <p><a href="https://play.google.com/store/apps/details?id=com.weather_app_5thseason" target="_blank">Check on Github Web</a></p>
         </section>
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
