--- a/beberavi.html
+++ b/beberavi.html
@@ -67,8 +67,8 @@
             </div>
         </section>
         <section class="sub-section_beberavi" id="about-me">
-            <p><a class="link_beberavi" href="https://github.com/100prein/webPorject_github/tree/main" target="_blank">Check on Github</a></p>
-            <p><a class="link_beberavi" href="https://100prein.github.io/webPorject_github/" target="_blank">Check on Github Web</a></p>
+            <p><a class="link_beberavi" href="https://github.com/100prein/beberavi3" target="_blank">Check on Github</a></p>
+            <p><a class="link_beberavi" href="https://100prein.github.io/beberavi3/" target="_blank">Check on Github Web</a></p>
         </section>
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
