update on 5th season page 1

--- a/5thseason.html
+++ b/5thseason.html
@@ -54,67 +54,55 @@
         <section class="project_linkups" >
             <div id="introduction">
                 <h2>Introduction</h2>
-                <p class="description">Linkups is a company dedicated to helping people connect with outdoor activities, groups, and events in their local community. With the ongoing challenges of COVID-19, it's more important than ever to prioritize physical and mental health, and getting outside is a key part of that. Linkups is focused on making it easy and convenient for people to find and participate in safe, fun, and engaging outdoor activities that promote well-being and community connection. </p>
+                <p class="description">5th Season Weather Application is a mobile application that tells users information about today and weekly forecast. What is special about this app is it  tells users the fashion that is suitable for them to wear for every weather. </p>
             </div>
             <div id="goals">
                 <h2>Project Goals</h2>
                 <p class="description">
                     <ol class="making_points">
-                        <li>Introducing our platform to local businesses, groups, and event planners to list their outdoor events and activities through our platform. </li>
-                        <li>Launch a referral program to incentivize current users to refer their friends and family to the platform. </li>
-                        <li>Increase user sign-ups by 50% within the next 6 months. </li>
-                        <li>Host at least 2 in-person outdoor events, adhering to local health and safety guidelines, to promote the Linkups platform and engage with users face-to-face.</li>
-                        <li> By achieving these goals and objectives, Linkups will be able to establish a strong foundation in New York City, build brand recognition and loyalty among users, and set the stage for continued growth and expansion into new markets in the future.</li>
+                        <li>Provide weekly and Hourly forecast </li>
+                        <li>Provide additional weather details such as: Dew Point, Air Quality, Humidity, Wind Direction and more. </li>
+                        <li>Generate fashion to recommend type of clothes to wear for every weather. This will prevent over- and under-dress. </li>
                     </ol>
                 </p>
             </div>
         </section>
 
         <!--Design and Development Process / Features and Functionality-->
-        <section class="project_linkups">
+        <!--<section class="project_linkups">
             <div id="design">
                 <h2>Design and Development Process</h2>
-                <p class="description">We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community. </p><img class="project_demo" src="./linkups/brainstorming_1.png" alt="brainstorming doc"><div><caption>Brainstorming our Ideas</caption></div>
-                <img class="project_demo" src="./linkups/brainstorming_2.png" alt="brainstorming doc"><div><caption>Brainstorming extended</caption></div>
-                <p class="description">In our second class meeting with our professor, I was assigned to lead team one. I assigned multiple roles to my teammates. Leon was a chatbot developer, Sebastian was a powerpoint creator, Hemraj was a writer, Kevin was a web designer and I was a project manager. Roles were not limited to what was aasigned as our professor gave us activities to complete for our project. We eventually got our project name and created a <a href="./linkups/project_proposal.pdf"> project proposal</a> for Linkups. We continued with vision and mission statements followed by Gantt chart.</p><img class="project_demo" src="./linkups/gantt_chart.png" alt="Gantt Chart"><div><caption>Gantt Chart on Project Libre</caption></div>
+                <p class="description"></div>
             </div>
             <div id="functionality">
                 <h2>Features and Functionality</h2>
-                <p class="description">Linkups will be access on our website and mobile applications. We have hosted our website on Github testing and feedback. Users can book any event on the homepage of our website. Upon RSVPying an event, a section of the booking page will suggest some precautions and tools to use depending on what type of event they are going to. They will be able to search for any events with filtering functionality such as earliest date, nearest location and event type. </p>
+                <p class="description"></p>
             </div>
-        </section>
+        </section>-->
 
         <!--Technologies Used / Your Role-->
-        <section class="project_linkups">
+        <!--<section class="project_linkups">
             <div id="roles">
                 <h2>Technologies Used and Roles</h2>
-                <p class="description"> <abbr title="It is a program developed by The Project Libre community to assist users with tracking the progress of their projects. " >Project Libre</abbr> was used for creating a <abbr title="Henry L. Gantt, a mechanical engineer and management consultant, developed Gantt charts almost 100 years ago. His goal was to design a chart that could show planned and actual progress on a project. A Gantt chart is a horizontal bar chart that represents a set of tasks. ">Gantt chart</abbr> , Google Docs, Microsoft Word were used for writing our notes, project proposal, scripts etc..., Google Sheets was used to make <abbr title="A decision table is a scheduled rule logic entry, in table format, that consists of conditions, represented in the row and column headings, and actions, represented as the intersection points of the conditional cases in the table. ">Decision Table,</abbr>  Visual Code Studio was used to create our website, MacInCloud is a virtual machine used for virtual MacOS, to develop an iOS application with SwiftUI, and Microsoft PowerPoint was used to present our project.</p>
-                <img class="project_demo" src="./linkups/ios_linkups.png" alt="Swift UI IDE">
-                <p class="description">Leon created a group channel on Microsoft Teams so we can share and centralize our files with tohe members.</p>
-                <p class="description">Sebastian used Lucid Chart to create <abbr title="A context diagram is a top-level view of an information system that shows the system’s boundaries and scope. "> Context Level Diagram </abbr>for Linkups.</p>
-                <p class="description">Kevin and Leon used Visual Studio Code for developing our Website and chatbot for user's assistance.</p>
-                <p class="description">I used Microsoft 365, Zoom, Whatsapp, Github and Project Libre to schedule weekly meetings, manage our Gantt Chart, communicate with the team and shared our website code online.</p>
-                
+                <p class="description"> </p>
             </div>
-        </section>
+        </section>-->
  
         <!--Challenges and Solutions / Results and Impact-->
-        <section class="project_linkups">
+        <!--<section class="project_linkups">
             <div id="challenges">
                 <h2>Challenges and Solutions</h2>
-                <p class="description">Assigning roles to each members was one of my challenges. I was not able to assign roles to eavery member until we finished brainstorming, wrote our project proposal and watched an example of a final presentation from previous class. It roles and assignments are given as we go on with our project until the finish line.</p>
-                <p class="description">Every team member have different schedules, so I must come up with a schedule that suits everyone. I created couple of polls on Whatsapp to finally come up with a time to meet weekly. There were moments where we would meet twice a week during midterms.</p>
-                <p class="description">There were concerns about sharing our web design and chatbot for the presentation. I combined the Chatbot and our website. I used GitHub to share our code and live static website so anyone can visit it.</p>
+                <p class="description"></p>
             </div>
-        </section>
+        </section>-->
 
          <!--Conclusions-->
-         <section class="project_linkups">
+         <!--<section class="project_linkups">
             <div id="conclusion">
                 <h2>Conclusion</h2>
-                <p class="description">Our project was a success not just because of knowledge and experience but with my classmates who were willing to work together and complete their assigned tasks. I want them to succeed as well as they want me to succeed in this project. Throughout the semester, we understood what are our problems and overcome them by figuring out to solve or improvise. With empathy, I assisted some of classmates to complete their tasks as school and work took over their schedule sometimes as well as they assisted me with my tasks I should have completed. Without them, this project would be near impossible to meet the deadline. I am so proud of the work we have done as a member of team 1! </p>
+                <p class="description"></p>
             </div>
-        </section>
+        </section>-->
         <section class="sub-section_linkups" id="about-me">
             <!--<p><a href="https://github.com/100prein/webPorject_github/tree/main" target="_blank">Check on Github</a></p>-->
             <p><a href="https://play.google.com/store/apps/details?id=com.weather_app_5thseason" target="_blank">Check on Github Web</a></p>
